@@ -1,3 +1,9 @@
+2012-08-03  Nick Alcock  <nick.alcock@oracle.com>
+
+	* runtest.sh: Compare sorted results.  Print hanging-dtrace
+	messages to standard error even when in quiet mode.  Tiny
+	grammar nit.
+
 2012-08-02  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dt_proc.c (dt_proc_control_data): New members
